# SAP-aicore-gpu

./: .gitignore  NOTES.md  README.ipynb  README.md  SAP_AI_Core_commands.ipynb  docker.creds_template  github.token_template  pyproject.toml  sapaicore_utils.py  serving_executable.yaml
server/: Dockerfile  links.md  requirements.txt  serve.py  tf_template.py
tf-text-classifier/: serving_executable.yaml
tf_files/: links.md
tutorial-tf-text-clf/: serving_executable.yaml
