[tool.poetry]
name = "sap-aicore-gpu"
version = "0.1.0"
description = ""
authors = ["gsalomone <gianfranco.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ai-core-sdk = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
