[tool.poetry]
name = "sap-aicore-gpu"
version = "0.1.0"
description = ""
authors = ["gsalomone <gianfranco.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
ai-core-sdk = "^2.1.1"
python-dotenv = "^1.0.1"
boto3 = "^1.34.49"
flask = "^3.0.2"
tensorflow = "^2.15.0.post1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
