[tool.poetry]
name = "sap-aicore-gpu"
version = "0.1.0"
description = ""
authors = ["gsalomone <gianfranco.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ai-core-sdk = "^2.1.1"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.51"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.2"
scikit-learn = "^1.4.1.post1"
tensorflow = "2.10.0"
gunicorn = "^21.2.0"
jupytext = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
